--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "base-64",
 	"version": "0.1.0",
 	"description": "A robust base64 encoder/decoder that is fully compatible with `atob()` and `btoa()`, written in JavaScript.",
-	"homepage": "http://mths.be/base64",
+	"homepage": "https://mths.be/base64",
 	"main": "base64.js",
 	"keywords": [
 		"codec",
@@ -12,30 +12,20 @@
 		"atob",
 		"btoa"
 	],
-	"licenses": [
-		{
-			"type": "MIT",
-			"url": "http://mths.be/mit"
-		}
-	],
+	"license": "MIT",
 	"author": {
 		"name": "Mathias Bynens",
-		"url": "http://mathiasbynens.be/"
+		"url": "https://mathiasbynens.be/"
 	},
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/mathiasbynens/base64.git"
 	},
-	"bugs": {
-		"url": "https://github.com/mathiasbynens/base64/issues"
-	},
+	"bugs": "https://github.com/mathiasbynens/base64/issues",
 	"files": [
 		"LICENSE-MIT.txt",
 		"base64.js"
 	],
-	"directories": {
-		"test": "tests"
-	},
 	"scripts": {
 		"test": "node tests/tests.js"
 	},
