--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
 		"test": "node tests/tests.js"
 	},
 	"devDependencies": {
-		"coveralls": "^2.10.0",
+		"coveralls": "^2.11.4",
 		"grunt": "^0.4.5",
-		"grunt-shell": "^0.7.0",
+		"grunt-shell": "^1.1.2",
 		"grunt-template": "^0.2.3",
-		"istanbul": "^0.2.10",
-		"qunit-extras": "^1.2.0",
-		"qunitjs": "~1.11.0",
-		"regenerate": "^0.6.2",
-		"requirejs": "^2.1.13"
+		"istanbul": "^0.4.0",
+		"qunit-extras": "^1.4.4",
+		"qunitjs": "^1.20.0",
+		"regenerate": "^1.2.1",
+		"requirejs": "^2.1.22"
 	}
 }
