--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "base-64",
-	"version": "0.1.0",
+	"version": "1.0.0",
 	"description": "A robust base64 encoder/decoder that is fully compatible with `atob()` and `btoa()`, written in JavaScript.",
 	"homepage": "https://mths.be/base64",
 	"main": "base64.js",
@@ -27,11 +27,13 @@
 		"base64.js"
 	],
 	"scripts": {
-		"test": "mocha tests/tests.js"
+		"test": "mocha tests/tests.js",
+		"build": "grunt build"
 	},
 	"devDependencies": {
 		"coveralls": "^2.11.4",
 		"grunt": "^0.4.5",
+		"grunt-cli": "^1.3.2",
 		"grunt-shell": "^1.1.2",
 		"grunt-template": "^0.2.3",
 		"istanbul": "^0.4.0",
